2006-08-25  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Use text/csv rather than
	text/x-comma-separated-values, patch by Ville Skyttä
	<ville.skytta@iki.fi> (Closes: #6616)

2006-08-25  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Use application/javascript rather than
	application/x-javascript, patch by Ville Skyttä <ville.skytta@iki.fi>
	(Closes: #6616)

2006-08-25  Bastien Nocera  <hadess@hadess.net>

	* README: Add some reference links

2006-08-25  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Pino Toscano
	<toscano.pino@tiscali.it> to add the application/sieve mime-type
	for Sieve scripts (Closes: #6572)

2006-08-25  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add text/x-ocaml as a mime-type for OCaml
	files (Closes: #7836)

2006-08-25  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add application/x-debian-package as an alias
	for application/x-deb, as used by Apache, spotted by Gustavo
	J. A. M. Carneiro <gjc@inescporto.pt> (Closes: #6303)

2006-08-25  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add *.dtx and *.ins as possible patterns
	for TeX files, spotted by Thomas Braun <braun@physik.fu-berlin.de>
	(Re: #6235)

2006-08-25  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Fix the magic offset for M4A files, spotted
	by thrope <freedesktop@robince.ftml.net> (Closes: #7718)

2006-08-25  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: add "check" to the default target when compiling from
	CVS
	* freedesktop.org.xml.in: Change application/x-jar to the SUN-
	recommended application/x-java-archive, add an alias for the former,
	Add better conditional magic to tell zip files and .jars apart,
	Thanks to Joseph Kowalski <jek3@eng.sun.com> for his detailed report
	(Closes: #7852)

2006-08-25  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Wouter Bolsterlee