@@ -777,6 +777,12 @@ command to generate the output files.
     <alias type="application/dbf"/>
     <alias type="application/dbase"/>
   </mime-type>
+  <mime-type type="application/ecmascript">
+    <alias type="text/ecmascript"/>
+    <sub-class-of type="text/plain"/>
+    <_comment>ECMAScript program</_comment>
+    <glob pattern="*.es"/>
+  </mime-type>
   <mime-type type="application/x-dbm">
     <magic priority="50">
       <match type="big32" value="0x061561" offset="0"/>
