@@ -1,5 +1,11 @@
 2006-08-25  Bastien Nocera  <hadess@hadess.net>
 
+	* freedesktop.org.xml.in: Add ECMAScript mime-type
+	(application/ecmascript), patch by Ville Skyttä
+	<ville.skytta@iki.fi> (Closes: #6616)
+
+2006-08-25  Bastien Nocera  <hadess@hadess.net>
+
 	* freedesktop.org.xml.in: Use text/csv rather than
 	text/x-comma-separated-values, patch by Ville Skyttä
 	<ville.skytta@iki.fi> (Closes: #6616)
